...

    Scaffold (
        topBar = {
            TopAppBar {
                IconButton(
                    onClick = onCloseClicked,
                    modifier = Modifier.semantics { testTag = "CloseDescriptionButton" })
                {
                    Icon(imageVector = Icons.Filled.ArrowBack, contentDescription = "Back")
                }
                Text(movie.title, fontWeight = FontWeight.Bold, modifier = Modifier.padding(start=10.dp))
            }
        })
...
                    Spacer(modifier = Modifier.height(20.dp))

                    // Description
                    Text(
                        movie.description,
                        textAlign = TextAlign.Justify,
                        modifier = Modifier.semantics { testTag = "MovieDescription" }
                    )
                }
            }

        }
    }
...
