...
        // Observing state
        val state by viewModel.state.collectAsState()
        val view = LocalView.current

        Column (horizontalAlignment = Alignment.CenterHorizontally) {

            SearchBar (
                text = state.searchInput,
                onValueChanged = { newText ->
                    viewModel.changeSearchBarText(newText)
                    if (!state.connected) noInternetSnackBar()
                                 },
                onDoneTyping = { view.clearFocus() },
...
@Composable
fun MovieList(movies: List<Movie>, onItemClicked: (Movie) -> Unit) {
    LazyColumn (modifier = Modifier.semantics { testTag = "MovieList" }) {
        items(movies) { movie ->
            Button(
                onClick = { onItemClicked(movie) },
                modifier = Modifier.semantics { testTag = "MovieItemButton" }
                    //.border(0.dp, MaterialTheme.colors.primary, RectangleShape)
                //TODO remove outline??
            ){
                MovieItem(movie = movie)
            }
        }
...
